# sago_env

./: .gitignore  README.md
db/poul_db/: community_archiver.json  deploy_schemas.sh  poul_raw.json
db/poul_db_pg/: deploy_schemas.sh
db/scripts/: github_stats_download.sh
db/scripts/fill_archive_data/: load_oa_data.bash  oa.json
docker/crontest/: Dockerfile  crontab
go/allenv/: allenv.go
go/gowiki/: wiki.go
go/pyramid/: pyramid.go
java/baseprogram/: dependency-reduced-pom.xml  pom.xml  run_result.sh
java/baseprogram_gradle/: build.gradle
java/hello_jersey/: pom.xml
java/hello_jersey_json/: pom.xml
java/mongodb_test/: pom.xml  run_result.sh
programs/basecmake/: .gitignore  CMakeLists.txt  basecmake.cpp
programs/basecmake/src/: basecmake.cpp
programs/baseprogram/: Makefile  baseprogram.cpp
programs/baseprogram/nbproject/: configurations.xml  project.xml
programs/basesimpleprogram/: Makefile
programs/community-archiver/: .gitignore  CMakeLists.txt  print_hash_sums_single.bash
programs/community-archiver-py/: community-archiver-json2db.py  community-archiver-py.py
programs/community-archiver-py/testdir/: testfile2.txt
programs/community-archiver/src/: community-archiver.cpp  rhash.hpp
programs/cppcms_hello_world/: .gitignore  CMakeLists.txt  config.js
programs/cppcms_hello_world/src/: cppcms_hello_world.cpp  hello.cpp  hello.hpp
programs/curl_test/: .editorconfig  Makefile  curl_test.cpp
programs/curl_test/nbproject/: configurations.xml  project.xml
programs/curl_test/sago/: CurlSago.hpp
programs/dbsync/: Makefile  dbsync.cpp
programs/dbsync/nbproject/: configurations.xml  project.xml
programs/dbsync/sago/: DbSyncDbMySql.cpp  DbSyncDbMySql.hpp  dbsync.cpp  dbsync.hpp  dbsync_db.hpp
programs/dungeon_generator_cpp/: .gitignore  CMakeLists.txt
programs/find_duplicates/: find_duplicates.py
programs/helloworld/: Makefile  helloworld.cpp
programs/logical_resize/: .gitignore  CMakeLists.txt
programs/nana_hello_world/: Makefile  nana_hello_world.cpp
programs/nana_list/: Makefile  nana_list.cpp
programs/ncurses_hello_world/: .gitignore  CMakeLists.txt
programs/oa_maps/: Makefile  oa_maps.cpp  onemap.hpp  scripts_with_arena.pk3
programs/oastat_game_delete/: Makefile  oastat_game_delete.cpp
programs/oastat_game_select/: Makefile  oastat_game_select.cpp
programs/platform_folders/: Makefile  platform_folders.cpp
programs/sago_mysql_csv_upsert/: .gitignore  CMakeLists.txt
programs/sago_quick_sql/: .gitignore  CMakeLists.txt  README.md
programs/sago_quick_sql/src/: CommandArguments.hpp  Connection.cpp  Connection.hpp  McpServer.cpp  McpServer.hpp  sago_quick_sql.cpp
programs/sagosmfl1/: CommandProcessor.cpp  Makefile  game.cpp  game.hpp  mainmenu.cpp  sagosmfl1.cpp
programs/sdl2test1/: Makefile  sdl2test1.cpp
programs/sdl2test1a/: sdl2test1.cpp
programs/sdl2test2/: Makefile  sdl2test2.cpp
programs/sdl2test3/: Makefile  sdl2test3.cpp
programs/sdl2test4/: Makefile  sdl2test4.cpp
programs/smflmenutest/: Makefile  SagoCommandQueue.cpp  SagoCommandQueue.hpp  SagoDataHolder.cpp  SagoDataHolder.hpp  SagoMenu.cpp  SagoMenu.hpp  smflmenutest.cpp
programs/smflspritetest/: AUTHERS  Makefile  sfmlspritetest.cpp
programs/smfltest/: Makefile  sfmltest.cpp
programs/smfltest3/: Makefile  TextureHolder.cpp  TextureHolder.hpp  smfltest3.cpp
programs/smfltest4/: .gitignore  Makefile  SagoSprite.cpp  SagoSprite.hpp  TextureHolder.cpp  TextureHolder.hpp  smfltest4.cpp
programs/smfltest5/: .gitignore  FrameCounter.cpp  FrameCounter.hpp  GameCharacter.cpp  GameCharacter.hpp  GameDraw.hpp  Makefile  SagoDataHolder.hpp  SagoSprite.cpp  SagoSprite.hpp  smfltest5.cpp
programs/smfltest6/: .gitignore  FrameCounter.hpp  GameCharacter.hpp  GameDraw.cpp  GameDraw.hpp  GameModelClient.cpp  GameModelClient.hpp  Makefile  MoveInput.hpp  SagoDataHolder.cpp  SagoDataHolder.hpp  SagoInput.cpp  SagoInput.hpp  SagoSprite.hpp
programs/tiledtest/: .gitignore  CMakeLists.txt
programs/tiledtest/data/maps/: Terrain.tsx  sample1.json  sample1.tmx  sample2.tmx
programs/tiledtest/src/: tiledtest.cpp
programs/tiledtest/src/Libs/tmx/: tmx.c  tmx_utils.c  tmx_xml.c
programs/tiledtest/src/sagotmx/: tmx_struct.h
programs/wt_hello_world/: .gitignore  CMakeLists.txt
programs/wt_hello_world/src/: wt_hello_world.cpp
programs/wt_hello_world/static_files/: somefile.txt
programs/wxtest/hello_world/: .gitignore  CMakeLists.txt
programs/wxtest/hello_world/src/: hello_world.cpp
python/duplicate_eliminator/: duplicate_eliminator.py
python/github_download_stats_reader/: github_download_stats_reader.py
python/github_secret_updater/: github_secret_updater.py
python/mysql_csv_upsert/: mysql_csv_upsert.py
python/nicegui_basic_layout/: nicegui_basic_layout.py
resources/: gradle-tab-completion.bash  vimrc
templates/cpp/: SagoGameState.cpp  SagoGameState.hpp
(+63 files in other folders)
